Update jdk image and donkey release version